<resources>
    <string name="app_name">TeethHistory</string>
    <string name="input_unique_name">Please input a unique username</string>
    <string name="choose_if_you_have_baby_teeth">Choose if you have baby teeth</string>
    <string name="username">Name</string>
    <string name="create_user">Create user</string>
    <string name="name_error">"Max name length was exceeded"</string>
    <string name="settings">Settings</string>
    <string name="choose_user">Choose user</string>
    <string name="edit_user">Edit user</string>
    <string name="delete_user">Delete user</string>
    <string name="question_delete_user">Delete user?</string>
    <string name="create_new_user">Create new user</string>
    <string name="cancel">Cancel</string>
    <string name="edit_username">Edit username</string>
    <string name="ok">OK</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>
    <string name="triple_dots">⋮</string>
    <string name="share">Share</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="photo_already_added">The photo has already added</string>
    <string name="edit_tooth_state">"Edit tooth #"</string>
    <string name="is_exist">Exist</string>
    <string name="is_baby_tooth">Baby tooth</string>
    <string name="is_permanent_tooth">Permanent tooth</string>
    <string name="is_filled">Filled</string>
    <string name="is_implant">Implant</string>
    <string name="state">" state"</string>
    <string name="no_teeth_yet">No teeth yet</string>
    <string name="have_all_baby_tooth">Have all baby teeth</string>
    <string name="all_teeth_are_permanent">All teeth are permanent</string>
    <string name="date">Date</string>
    <string name="add_new_event">Add new event</string>
    <string name="choose_action">Choose action</string>
    <string name="warranty_in_months">Warranty in months</string>
    <string name="notes">Notes</string>
    <string name="create_event">Create event</string>
    <string name="implanting">Implanting</string>
    <string name="cleaned">Cleaned</string>
    <string name="filled">Filled</string>
    <string name="extracted">Extracted</string>
    <string name="other">Other</string>
    <string name="grown">Grown</string>
    <string name="implanted">Implanted</string>
    <string name="delete_event">Delete event?</string>
    <string name="tooth_state">Tooth state</string>
    <string name="normal">Normal</string>
    <string name="not_grown_or_removed">Not grown or removed</string>
    <string name="import_json">Import</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="days_of_warranty_left_1">" days of warranty left"</string>
    <string name="days_of_warranty_left_2_4">" days of warranty left"</string>
    <string name="days_of_warranty_left_5_20">" days of warranty left"</string>

    <string name="warranty_expired">Warranty expired</string>
    <string name="save">Save</string>
    <string name="new_user">New user</string>
    <string name="edit_event"><b>Edit event</b></string>
    <string name="new_event"><b>New event</b></string>

    <!--<string name="banner_ad_unit_id">ca-app-pub-7134894477715486/4774729002</string>-->

    <string-array name="actions">
        <item>Cleaned</item>
        <item>Filled</item>
        <item>Extracted</item>
        <item>Grown</item>
        <item>Implanted</item>
        <item>Other</item>
    </string-array>

</resources>