<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="event"
            type="com.appsverse.teethhistory.data.Event" />

        <variable
            name="model"
            type="com.appsverse.teethhistory.viewModels.NewEventViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/fragment_margin"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/event_fragment_name_text_size"
            android:text="@string/new_event"
            android:textColor="?attr/colorPrimaryDark"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_event_date_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_new_event_date_TIL_margin_top"
            android:hint="@string/date"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_event_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="date"
                android:text="@{@string/format(event.date)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_action_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_new_event_action_menu_margin_top"
            android:hint="@string/choose_action"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start">

            <com.appsverse.teethhistory.ExposedDropdownMenu
                android:id="@+id/tooth_action_ACTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/fragment_new_event_warranty_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_new_event_warranty_margin_top"
            android:hint="@string/warranty_in_months"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:errorEnabled="true"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/warranty_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:labelFor="@id/warranty_slider"
                android:text="@={`` + event.warranty}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/warranty_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stepSize="1"
            android:value="@{event.warranty}"
            android:valueFrom="@dimen/fragment_new_event_warranty_slider_value_from"
            android:valueTo="@dimen/fragment_new_event_warranty_slider_value_to" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_new_event_notes_margin_top"
            android:hint="@string/notes"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            app:errorEnabled="true"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start"
            android:layout_marginEnd="@dimen/new_and_edit_fragments_items_margin_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:text="@={event.notes}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start">

            <ImageButton
                android:id="@+id/photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <ImageButton
                android:id="@+id/galleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_collections_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_event_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            android:layout_marginStart="@dimen/new_and_edit_fragments_items_margin_start"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragments_buttons_margin_top"
            android:layout_marginBottom="@dimen/fragments_buttons_margin_top"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fragment_new_event_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{() -> model.onClickCancelButton(event, context)}"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnSecondary"/>

            <Button
                android:id="@+id/fragment_create_new_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:onClick="@{() -> model.onClickSaveButton(event, context)}"
                android:text="@string/create_event"
                android:textColor="?attr/colorOnSecondary"/>

        </RelativeLayout>
    </LinearLayout>
</layout>