<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="event"
            type="com.appsverse.teethhistory.data.Event" />

        <variable
            name="model"
            type="com.appsverse.teethhistory.viewModels.EditEventViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_event_date_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_edit_event_edit_event_TIL_margin_top"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="date"
                android:text="@{@string/format(event.date)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_event_action_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_edit_event_edit_event_action_menu_margin_top"
            android:hint="@string/choose_action">

            <com.appsverse.teethhistory.ExposedDropdownMenu
                android:id="@+id/edit_toothActionACTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_warranty_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/fragment_edit_event_warranty_TIL_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_edit_event_warranty_TIL_margin_top"
            android:hint="@string/warranty_in_months"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_warranty_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:labelFor="@id/edit_warranty_slider"
                android:text="@={`` + event.warranty}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/edit_warranty_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stepSize="1"
            android:value="@{event.warranty}"
            android:valueFrom="@dimen/fragment_edit_event_warranty_slider_value_from"
            android:valueTo="@dimen/fragment_edit_event_warranty_slider_value_to" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_edit_event_notes_TIL_margin_top"
            android:hint="@string/notes"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNotesTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:text="@={event.notes}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/photoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <ImageButton
                android:id="@+id/galleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_collections_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_event_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_edit_event_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_edit_event_buttons_margin_start"
                android:gravity="center"
                android:onClick="@{() -> model.onClickCancelButton(event, context)}"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/fragment_edit_event_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_edit_event_buttons_margin_start"
                android:gravity="center"
                android:onClick="@{() -> model.onClickSaveButton(event, context)}"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>
</layout>