<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="user"
            type="com.appsverse.teethhistory.data.User" />

        <variable
            name="model"
            type="com.appsverse.teethhistory.viewModels.CreateNewUserViewModel" />

        <variable
            name="errorMessage"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={user.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/initialTeethStateRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_button_all_permanent">

            <RadioButton
                android:id="@+id/radio_button_no_teeth_yet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="No teeth yet"
                android:checked="@={user.noTeeth}"/>

            <RadioButton
                android:id="@+id/radio_button_have_baby_teeth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Have at least one baby tooth"
                android:checked="@={user.babyTeeth}"/>

            <RadioButton
                android:id="@+id/radio_button_all_permanent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="All teeth are permanent"/>

        </RadioGroup>

        <!--<CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={user.babyTeeth}"
            android:text="@string/choose_if_you_have_baby_teeth" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_create_new_user_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:onClick="@{() -> model.onClickCancelButton(context)}"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/create_new_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:enabled="false"
                android:gravity="center"
                android:onClick="@{() -> model.onClickSaveButton(user, context)}"
                android:text="@string/create_user" />


        </LinearLayout>
    </LinearLayout>
</layout>